--- a/components/typography/_titles.css
+++ b/components/typography/_titles.css
@@ -8,7 +8,7 @@
     font-family: var(--ff-lead);
     font-size: 2.6rem;
     font-weight: var(--fw-bold);
-    letter-spacing: -.125rem;
+    letter-spacing: -.0938rem;
   }
 
   /* h1 */
@@ -17,7 +17,7 @@
     font-size: var(--h1-fs);
     line-height: 1.3;
     margin-bottom: 2rem;
-    letter-spacing: -.125rem;
+    letter-spacing: -.0938rem;
   }
 
   /* h2 */
@@ -26,7 +26,7 @@
     font-size: var(--h2-fs);
     line-height: 1.3;
     margin-bottom: 1.5rem;
-    letter-spacing: -.125rem;
+    letter-spacing: -.0938rem;
   }
 
   /* h3 */
@@ -69,7 +69,7 @@
     font-size: var(--h1-fs);
     line-height: 1.3;
     margin-bottom: 2rem;
-    letter-spacing: -.125rem;
+    letter-spacing: -.0938rem;
   }
 
   h2 {
@@ -77,7 +77,7 @@
     font-size: var(--h2-fs);
     line-height: 1.3;
     margin-bottom: 1.5rem;
-    letter-spacing: -.125rem;
+    letter-spacing: -.0938rem;
   }
 
   h3 {
